# fluxer-rolebot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  fly.toml  main.py  pyproject.toml
cogs/: admin.py  reaction_handling.py  util.py
util/: admin.py  database.py  events.py
